asynchronise some http calls, listening reward fixed, minor other fixes